# EduInsights-Project

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Example Celery Code.txt  README.md  Result-Extractor.ipynb  Result-Extractor.py  alembic.ini  commands.md  compute.py  docker-compose.yml  eduinsightAPI.json  extractor_flow.txt  main.py  preprocessing.py  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
Captcha-Solver/: authenticate.py  captcha_solver.py  compute.py  credits.json  driveSheetsOps.py  driver.py  generateResult.py  new-scraper.py  preprocessing.py  scraper.py  trueCaptcha.py
EduInsights/: Result-Extractor.py
EduInsights/Captcha-Solver/: authenticate.py  compute.py  credits.json  driveSheetsOps.py  driver.py  generateResult.py  preprocessing.py  scraper.py  trueCaptcha.py
PDF_Extractor/: Result-Extractor.ipynb  generateResult.py  pdf.py  preprocessing.py
alembic/: env.py
alembic/versions/: 1faaeaf8c38f_added_start_end_usn.py  20e1c8fcbde7_.py  27c2b08c0a31_.py  294592dae1e8_added_lateral_start_end_usn.py  40deb130cb9a_removed_enum_depts.py  4ea34fb8236a_initial_db_models.py  (+13 more)
api/: batches.py  departments.py  extractions.py  marks.py  sections.py  semesters.py  student_performances.py  students.py  subjects.py
db/: db_setup.py
eduEnv/: pyvenv.cfg
pydantic_schemas/: batch.py  department.py  extraction.py  extraction_invalid.py  mark.py  section.py  semester.py  student.py  student_performance.py  subject.py
webExtractor/: authenticate.py  credits.json  driveSheetsOps.py  driver.py  generateResult.py  preprocessing.py  scraper.py  trueCaptcha.py
(+25 files in other folders)
