[tool.poetry]
name = "eduinsights-project"
version = "0.1.0"
description = ""
authors = ["Srikar V <srikarvuchiha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pymupdf = "^1.24.2"
requests = "^2.31.0"
selenium = "^4.20.0"
sqlalchemy = "^2.0.29"
tqdm = "^4.66.4"
google-api-python-client = "^2.127.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
pydantic = "^2.7.1"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.2"
alembic = "^1.13.1"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"
pre-commit = "^3.7.0"
fastapi2postman = "^0.1.2"
isort = "^5.13.2"
pyupgrade = "^3.15.2"
ruff = "^0.4.3"

[tool.pyright]
venv = ".venv"
venvPath = "."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | alembic
)/
'''

[tool.ruff]
line-length = 88

select = ["E", "F", "W"]
ignore = ["E501"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "alembic",
    "db/models",
]
